--- a/datasift-writer/pom.xml
+++ b/datasift-writer/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>fluent-hc</artifactId>
             <version>4.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>amazon-kinesis-client</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
