--- a/hosebird-reader/pom.xml
+++ b/hosebird-reader/pom.xml
@@ -15,5 +15,10 @@
             <artifactId>hbc-core</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>amazon-kinesis-producer</artifactId>
+            <version>0.10.2</version>
+        </dependency>
     </dependencies>
 </project>
