--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <!-- dependency versions -->
         <java.version>1.7</java.version>
         <junit.version>4.12</junit.version>
+        <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
 
     <modules>
@@ -33,6 +34,7 @@
         <module>twitterapi-reader</module>
         <module>datasift-writer</module>
         <module>historics-reader</module>
+        <module>instagram-historic-reader</module>
     </modules>
 
     <organization>
@@ -267,8 +269,9 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
             <plugin>
-                <!-- Sun coding standard -->
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.15</version>
@@ -288,6 +291,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
@@ -340,7 +344,7 @@
                 </dependencies>
             </plugin>
         </plugins>
-        <!-- update checkstyle used by maven plugin at runtime -->
+        <!-- update checkstyle used by maven plugin at runtime
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -357,6 +361,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        -->
     </build>
 </project>
 
